# Loom

./: .gitignore  LICENSE  Loom.md  PROJECT_RECOVERY.md  PROJECT_STATE.md  README.md  eslint.config.mjs  index.html  loom-design-entry.css  loom-entry.tsx  package-lock.json  package.json  patch.py  vite.config.ts  vitest.config.ts  wait_for_cdp.cjs
.design-sync/: NOTES.md  config.json  conventions.md
.design-sync/previews/: AsyncButton.tsx  Button.tsx  OverlayShell.tsx
Themestudio_test/: theme-abyss-green.css  theme-abyss-green.loomtheme.json  theme-ember-red.css  theme-ember-red.loomtheme.json  theme-obsidian-gold.css  theme-obsidian-gold.loomtheme.json  theme-void-purple.css  theme-void-purple.loomtheme.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  errors.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: archive.rs  automation.rs  commands.rs  content_commands.rs  crypto_commands.rs  dashboard_commands.rs  export.rs  fs_commands.rs  lib.rs  library_commands.rs  projections.rs  recovery.rs  vault_hello.rs
src-tauri/src/database/: mod.rs
src-tauri/tests/: disk_recovery.rs  scale_perf.rs
src/__tests__/: DashboardValidation.test.tsx
src/components/: CommandPalette.tsx  Dashboard.tsx  LinkPicker.tsx  MediaEmbed.test.ts  MediaEmbed.ts  MediaTools.tsx  Modal.tsx  Modules.tsx  Modules2.tsx  NoteEditor.test.ts  NoteEditor.tsx  ReaderView.tsx  RecoveryPanel.tsx  Settings.tsx  ThemeStudio.tsx  TopNav.tsx  shared.tsx
src/data/: loomData.ts
src/ipc/: automation.ts  content.ts  fs.ts  index.ts  items.ts  links.ts  recovery.ts  search.ts  settings.ts  workspaces.ts
src/lib/: actions.test.ts  actions.ts  backgroundEngine.test.ts  backgroundEngine.ts  capture.test.ts  capture.ts  commands.tsx  (+34 more)
test/: a11y.test.tsx  chaos.test.tsx  commands.test.tsx  hardening.test.tsx  itemStore.test.tsx  replay.test.tsx  setup.ts
(+26 files in other folders)
