[package]
name = "loom"
version = "0.1.0"
description = "Offline-first personal Life OS — tasks, notes, projects, habits, vault encryption, automation engine"
authors = ["RUNExO2"]
edition = "2021"
default-run = "loom"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "loom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-dialog = "2.7.1"
uuid = { version = "1.23.3", features = ["v4"] }
chrono = "0.4.45"
opener = { version = "0.8.5", features = ["reveal"] }
zip = "0.6"
reqwest = { version = "0.13.4", features = ["json"] }
urlencoding = "2"
regex = "1"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = "1"
tokio-rusqlite = "0.6.0"
tokio = { version = "1", features = ["full"] }
moka = { version = "0.12", features = ["sync"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Windows Hello (biometric / PIN) vault unlock: WinRT consent verifier + DPAPI.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Foundation",
  "Security_Credentials_UI",
  "Win32_Security_Cryptography",
  "Win32_Foundation",
] }

[dev-dependencies]
tempfile = "3.27.0"


[[bin]]
name = "scale_bench"
path = "src/bin/scale_bench.rs"
